--- a/OBDARMSYSTEM/ARMSYSTEM/ARMSYSTEM.csproj
+++ b/OBDARMSYSTEM/ARMSYSTEM/ARMSYSTEM.csproj
@@ -4,9 +4,11 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <AssemblyName>ARMSYSTEM</AssemblyName>
     <TypeScriptToolsVersion>2.3</TypeScriptToolsVersion>
+    <StartupObject>ARMSYSTEM.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EPPlus.Core" Version="1.5.2" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0" />
@@ -17,6 +19,10 @@
 
   <ItemGroup>
     <DotNetCliToolReference Include="BundlerMinifier.Core" Version="2.2.301" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\App_Data\" />
   </ItemGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
