--- a/OBDARMSYSTEM/ARMSYSTEM/Properties/launchSettings.json
+++ b/OBDARMSYSTEM/ARMSYSTEM/Properties/launchSettings.json
@@ -15,12 +15,29 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "ARMSYSTEM": {
+    "production": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "http://localhost:5000",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      }
+    },
+    "development": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "inMemoryTesting": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "http://localhost:5000",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_InMemoryDataBase": true
       }
     }
   }
